# autojail

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
autojail/: main.py
autojail/src/: __init__.py  builtin.py  index.py  number.py  open.py  strings.py  subclass.py  util.py
tests/: test_number.py  test_strings.py
